implmenting Drag and Drop feature

--- a/src/components/style.css
+++ b/src/components/style.css
@@ -1,6 +1,6 @@
 .input{
     display: flex;
-    width: 90%;
+    width: 95%;
     position: relative;
     align-items: center;
 }
@@ -39,19 +39,39 @@
     transform: scale(0.8);
     box-shadow:  0 0 5px black;
 }
+
+.container{
+    display: flex;
+    width: 95%;
+    margin-top: 10px;
+    justify-content: space-between;
+    align-items: flex-start;
+
+}
 .todos{
     display: flex;
-    justify-content: space-evenly;
-    width: 90%;
-    flex-wrap: wrap;
+    padding: 15px;
+    width: 47.5%;
+    flex-direction: column;
+    border-radius: 5px;
+    background-color: rgb(50, 195, 205);
+    
+}
+.todos__heading{
+    font-size: 30px;
+    color: white;
 }
 .todos__single{
     display: flex;
-    width: 29.5%;
     border-radius: 5px;
     padding: 20px;
     margin-top:15px;
     background-image: url("../images/glittery-star-confetti-colorful-abstract-pastel-watercolor-background_53876-98173.jpg");
+    transition: 0.2s;
+}
+.todos__single:hover{
+    box-shadow: 0 0 5px black;
+    transform: scale(1.03);
 }
 .todos__single--text {
     flex:1;
@@ -79,8 +99,22 @@
     }
     .todos {
         width: 95%;
+        margin-bottom: 10px;
     }
-    .todos__single{
+    /* .todos__single{
         width: 85%;
+    } */
+    .container{
+        width: 95%;
+        flex-direction: column;
     }
+}
+.remove{
+    background-color: rgb(235,103,80);
+}
+.dragactive{
+    background-color: rgb(0,221,236);
+}
+.dragcomplete{
+    background-color: rgb(255,38,0);
 }
